syntax = "proto3";

package org.sudu.protogen.test.general;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "protogen/options.proto";

option java_multiple_files = true;
option (.protogen.enable) = true;

message GrpcTaskId {
  string uuid = 1;
  option (.protogen.unfold) = true;
}

message GrpcBatchId {
  string uuid = 1 [(.protogen.field_name) = "taskId"];
  option (.protogen.unfold) = true;
}

enum GrpcTaskStatus {
  CREATED = 0;
  EXECUTING = 1;
  FINISHED = 2;

  option (.protogen.custom_enum) = "org.sudu.protogen.test.general.TaskStatus";
}

enum GrpcEnum {
  EN_CREATED = 0;
  EN_EXECUTING = 1;
  EN_FINISHED = 2;
}

message GrpcTask {
  GrpcTaskId id = 1;
  GrpcTaskStatus status = 2;
  google.protobuf.Timestamp createdAt = 3;
  optional string context = 4;
}

message GrpcTaskMapped {
  map<string, GrpcTask> taskMap = 1;
}

message GrpcTasksBatch {
  GrpcBatchId id = 1;
  repeated GrpcTask tasks = 2 [(.protogen.repeated_container) = SET];
}

message GrpcRegisteredMapList {
  map<string, google.protobuf.Timestamp> m = 1;
  repeated google.protobuf.Timestamp l = 2;
}

message GrpcRepeatedTypes {
  repeated string iterator = 1 [(.protogen.repeated_container) = ITERATOR];
  repeated string stream = 2 [(.protogen.repeated_container) = STREAM];
}

message GrpcSomeEvent {
  repeated string ids = 1;
  option (.protogen.topic) = "SOME_TOPIC";
}

message GrpcWithOneofs {
  string name = 1;
  oneof named {
    int32 a = 2;
    int32 b= 3;
  }
  option (.protogen.builder_for_nullable) = false;
}